# fifotest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: xr17v358.h
src/: main.c  xr17v358.c
tests/: xr17v358_tests.cpp
